# PerfProp

./: .gitignore  CMakeLists.txt  CommandParser.cpp  Event.cpp  EventGraph.cpp  EventGrouper.cpp  EventParser.cpp  FactorGraph.cpp  Node.cpp  Perf.cpp  PmuArch.cpp  PmuEvent.cpp  PmuEventParser.cpp  PmuGrouper.cpp  PmuParser.cpp  ProbabilityFunction.cpp  ProbabilityNode.cpp  README.md  SampleCollector.cpp  StringUtils.cpp  Style.md  TraceableProcess.cpp  Updaters.cpp  Utils.cpp  libpfm_events.txt  main.cpp  notes.md  probability_notes.tex  showevtinfo.c
docs/: design.md  old_design.md  style.md
include/: CommandParser.h  Edge.h  Event.h  EventGraph.h  EventGrouper.h  EventParser.h  FactorGraph.h  Logger.h  Node.h  Perf.h  PerfStats.h  PfmLib.h  PmuArch.h  PmuEvent.h  PmuEventParser.h  PmuGrouper.h  PmuParser.h  ProbabilityFunction.h  ProbabilityNode.h  SampleCollector.h  StatPrinter.h  StringUtils.h  TraceableProcess.h  Updaters.h  Utils.h
lib/VariadicTable/: VariadicTable.h
lib/expected/: expected.h
python/: main.py
test/: CMakeLists.txt  EventGrouperTest.cpp  EventParserTest.cpp  FactorGraphTest.cpp  PerfTest.cpp  PmuArchTest.cpp  PmuEventParserTest.cpp  PmuGrouperTest.cpp  PmuParserTest.cpp  SampleCollectorTest.cpp  standalone.cpp  testMain.cpp
